<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summaryOff="@string/vegan_summary_off"
        android:summaryOn="@string/vegan_summary"
        android:title="Vegan" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summaryOff="@string/vegetarian_summary_off"
        android:summaryOn="@string/vegetarian_summary_on"
        android:title="@string/vegetarian_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summaryOff="@string/gluten_free_summary_off"
        android:summaryOn="@string/gluten_free_summary_on"
        android:title="@string/gluten_free_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="None"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Other Preferences"
        android:summary="Enter any other dietary preferences here"/>


</PreferenceScreen>
